<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--
    <android.support.design.widget.AppBarLayout
        android:id="@+id/layout_group_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_gchannel"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Widget.AppCompat.Toolbar"
            app:popupTheme="@style/Theme.AppCompat.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/contact_name_1"
                android:textColor="#FFFFFF" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/message_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/date_message_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/june_10"
            android:textColor="#C0C0C0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_message_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#774df2"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_message_1">

            <LinearLayout
                android:id="@+id/layout_message_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_message_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:maxWidth="260dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="8dp"
                    android:paddingRight="12dp"
                    android:text="@string/message_1"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/timestamp_message_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9:34"
            android:textColor="#C0C0C0"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/card_message_1"
            app:layout_constraintEnd_toStartOf="@+id/card_message_1" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/message_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_1">


        <TextView
            android:id="@+id/text_user_message_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/contact_name_1"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_message_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#eef1f6"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_user_message_2">

            <LinearLayout
                android:id="@+id/layout_gchat_container_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_gchat_message_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:maxWidth="260dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="8dp"
                    android:paddingRight="12dp"
                    android:text="@string/message_2"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <TextView
            android:id="@+id/text_gchat_timestamp_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="18:21"
            android:textColor="#C0C0C0"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/card_message_2"
            app:layout_constraintStart_toEndOf="@+id/card_message_2" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/message_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_2">

        <TextView
            android:id="@+id/date_message_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="11 de Junho"
            android:textColor="#C0C0C0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_message_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#774df2"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_message_3">

            <LinearLayout
                android:id="@+id/layout_message_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_message_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:maxWidth="260dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="8dp"
                    android:paddingRight="12dp"
                    android:text="@string/message_3"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/timestamp_message_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8:30"
            android:textColor="#C0C0C0"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/card_message_3"
            app:layout_constraintEnd_toStartOf="@+id/card_message_3" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/message_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_3">



        <android.support.v7.widget.CardView
            android:id="@+id/card_message_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#774df2"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layout_message_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_message_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:maxWidth="260dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="8dp"
                    android:paddingRight="12dp"
                    android:text="@string/message_4"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/timestamp_message_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8:31"
            android:textColor="#C0C0C0"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/card_message_4"
            app:layout_constraintEnd_toStartOf="@+id/card_message_4" />


    </android.support.constraint.ConstraintLayout>




    <TextView
        android:id="@+id/text_gchat_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"
        app:layout_constraintBottom_toTopOf="@+id/layout_gchat_chatbox" />

    <RelativeLayout
        android:id="@+id/layout_gchat_chatbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/edit_gchat_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@+id/button_gchat_send"
            android:background="@android:color/transparent"
            android:hint="Escreva uma Mensagem..."
            android:inputType="text"
            android:maxLines="6"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/button_gchat_send"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:text="Enviar"
            android:textColor="#000000" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>